--- a/calc.css
+++ b/calc.css
@@ -3,3 +3,16 @@
   color: white;
   width: auto;
 }
+.buttons tr td button {
+  background-color: #4CAF50; /* Green */
+  border-radius: 25px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #339933;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
